plugins {
    id 'java'
    id 'io.quarkus' version '3.31.3'
    id 'io.freefair.lombok' version '9.2.0'
}

group = 'ch.nickl'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform('io.quarkus.platform:quarkus-bom:3.31.3')
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest-client-jackson'
    implementation 'io.quarkus:quarkus-scheduler'
    implementation 'io.quarkiverse.langchain4j:quarkus-langchain4j-openai:1.7.1'
    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
    implementation 'io.quarkus:quarkus-jdbc-h2'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'
    implementation 'io.quarkus:quarkus-flyway'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'org.assertj:assertj-core:3.27.7'

    runtimeOnly 'org.postgresql:postgresql'
}

test {
    useJUnitPlatform()
    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

tasks.withType(JavaExec).configureEach {
    systemProperty "file.encoding", "UTF-8"
    systemProperty "sun.stdout.encoding", "UTF-8"
    systemProperty "sun.stderr.encoding", "UTF-8"
    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
}
